# poetry-and-pytest-usage

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/scripts/: build-documentation.sh  pre-commit-script.sh  upload-read-the-docs.sh
.github/workflows/: pipeline.yml  prod.yml
docs/api/: hotel.md  period.md  room.md  schedule.md
docs/api/enums/: types.md
docs/api/exceptions/: exceptions.md
docs/api/exceptions/room/: invalid_period_error.md
hazbin_hotel/src/: hotel.py  main.py  period.py  room.py  schedule.py  utils.py
hazbin_hotel/src/enums/: types.py
hazbin_hotel/src/exceptions/: __init__.py
hazbin_hotel/src/exceptions/room/: invalid_period_error.py
src/: period.py  schedule.py
tests/: __init__.py  test_hotel.py  test_period.py  test_room.py  test_schedule.py
